# xmltodict_rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml  xmltodict_rs.pyi
.github/workflows/: CI.yml
benches/: accurate_benchmark.py  file_stream_benchmark.py
python/xmltodict_rs/: __init__.py  __init__.pyi
src/: config.rs  encoding.rs  error.rs  escape.rs  lib.rs  parser.rs  unparser.rs
src/reader/: decoded.rs  file_like.rs  generator.rs  mod.rs  pending.rs
tests/: decoding_reader_interrupted.rs  test_compatibility.py  test_encoding.py  test_input_sources.py  test_missing_functionality.py  test_nil_processors.py  test_parse_basic.py  test_parse_callbacks.py  test_parse_input.py  test_parse_lists.py  test_parse_namespaces.py  test_parse_parameters.py  test_parse_special.py  test_roundtrip.py  test_streaming_error_propagation.py  test_streaming_input_edge_cases.py  test_unparse.py  test_unparse_compatibility.py  test_whitespace_handling.py
xmltodict_rs/: __init__.py  __init__.pyi
