[package]
name = "xmltodict-rs"
version = "0.13.2"
edition = "2021"
authors = ["Kitaev Roman <802.11g@bk.ru>", "Merkulov Andrey <merander207203@gmail.com>"]
description = "High-performance XML to dict conversion library using Rust and PyO3"
license = "MIT"

[lib]
name = "xmltodict_rs"
crate-type = ["cdylib"]

[dependencies]
mimalloc = { version = "0.1.48", optional = true }
pyo3 = { version = "0.26", features = ["extension-module", "generate-import-lib"] }
quick-xml = { version = "0.31", features = ["serialize"] }

[features]
default = ["mimalloc"]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
