[package]
name = "xmltodict-rs"
version = "0.13.4"
edition = "2021"
authors = ["Kitaev Roman <802.11g@bk.ru>", "Merkulov Andrey <merander207203@gmail.com>"]
description = "High-performance XML to dict conversion library using Rust and PyO3"
license = "MIT"

[lib]
name = "xmltodict_rs"
crate-type = ["cdylib"]

[dependencies]
mimalloc = { version = "0.1.48", optional = true }
pyo3 = { version = "0.26", features = ["extension-module", "generate-import-lib"] }
quick-xml = { version = "0.31", features = ["serialize"] }
memchr  = { version = "2.7.6", default-features = false }

[features]
default = ["mimalloc"]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
warnings = "deny"

[lints.clippy]
style = "deny"
perf = "deny"
all = "deny"
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
