[build-system]
requires = ["maturin>=1.9.3"]
build-backend = "maturin"

[project]
name = "xmltodict-rs"
version = "0.1.0"
description = "High-performance XML to dict conversion library using Rust and PyO3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.9.3",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "xmltodict>=0.13.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "xmltodict>=0.13.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
